plugins {
    id 'org.springframework.boot' version '2.7.4'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
}

group = 'group.app'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.5'
    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer:3.1.5'
    implementation 'mysql:mysql-connector-java:8.0.30'
    implementation 'org.jgrapht:jgrapht:1.5.1'
    implementation 'org.jgrapht:jgrapht-core:1.5.1'
    implementation 'junit:junit:4.13.1'
    compileOnly 'org.projectlombok:lombok:1.18.24'

    runtimeOnly 'com.h2database:h2:2.1.214'

    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'


}

tasks.named('test') {
    useJUnitPlatform()
}
